Add endpoint activate user
