# app/domain/use-cases/account/index.js
@@ -1,7 +1,11 @@
+'use strict';
+
 const loginUC = require('./login-uc');
 const registerUc = require('./register-uc');
+const activateUC = require('./activate-uc');
 
 module.exports = {
+  activateUC,
   loginUC,
   registerUc,
 };
