# app/domain/use-cases/validators/index.js
@@ -2,8 +2,10 @@
 
 const validateLogin = require('./validate-login');
 const validateRegister = require('./validate-register');
+const validateActivate = require('./validate-activate');
 
 module.exports = {
   validateLogin,
   validateRegister,
+  validateActivate,
 };
