# app/interface/controllers/account/index.js
@@ -2,8 +2,10 @@
 
 const loginController = require('./login-controller');
 const registerController = require('./register-controller');
+const activateController = require('./activate-controller');
 
 module.exports = {
   loginController,
   registerController,
+  activateController,
 };
