# docs/swagger/swagger.yml
@@ -45,7 +45,39 @@ paths:
         200:
           $ref: '#/components/responses/200-LoginResponse'
 
+  /account/activate:
+    get:
+      tags:
+        - Account
+      summary: Activate a user
+      operationId: activate
+      description: Activate a user by uuid and activationCode
+      parameters:
+      -  $ref: '#/components/parameters/UuidQuery'
+      -  $ref: '#/components/parameters/ActivationCodeQuery'
+      responses:
+        204: 
+          $ref: '#/components/responses/204-NotContent'
+
 components:
+  parameters:
+    UuidQuery:
+      name: uuid
+      in: query
+      description: user id
+      required: true
+      schema:
+        type: string
+        example: 4d2...fd9
+    ActivationCodeQuery:
+      name: activationCode
+      in: query
+      description: user activation code
+      required: true
+      schema:
+        type: string
+        example: 4d2...fd9
+
   requestBodies:
     LoginData:
       description: Body containing email and password
@@ -97,6 +129,8 @@ components:
             properties:
               activationCode:
                 $ref: '#/components/schemas/ActivationCode'
+    204-NotContent:
+      description: Not content
 
   schemas:
     AccessToken:
